[package]
name = "math_256"
version = "0.1.0"
authors = ["Pinball Wizard <pinball_wizard@criptext.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
serde-json-wasm = { version = "0.2.1" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive", "alloc"] }
thiserror = "1.0"
serde_json = "1.0"
num256 = "0.3.0"
num-traits = "0.2.14"
lazy_static = "1.4.0"